trunk/Archive2/02/ab577742c1e05e/output
main.cpp: In function 'main':
main.cpp:4:18: error: subscripted value is neither array nor pointer nor vector
     (void *) &arr[0];
                  ^
