trunk/Archive2/02/ab577742c1e05e/main.cpp
int main()
{
    int arr;
    (void *) &arr[0];
}